# krets

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
circuits/basic_001/: basic_001.cir
circuits/circuit_simulation_farid_n_najm/: circuit_simulation_farid_n_najm.cir
circuits/diode_iv_curve/: diode_iv_curve.cir
circuits/dual_rc_ladder/: dual_rc_ladder.cir
circuits/high_pass_filter/: high_pass_filter.cir  transient.cir
circuits/high_pass_filter/transient/: krets.toml  transient.cir
circuits/inverter/dc/: inverter.cir  krets.toml  result.parquet
circuits/low_pass_filter/: low_pass_filter.cir  transient.cir
circuits/low_pass_filter/ac/: ac.cir  krets.toml  result.parquet
circuits/rectifier/: rectifier.cir
circuits/resistor_ladder_1000/: resistor_ladder_1000.cir
circuits/resistor_ladder_500/: resistor_ladder_500.cir
circuits/resistor_ladder_5000/: resistor_ladder_5000.cir
circuits/voltage_divider/: dc.cir  voltage_divider.cir
circuits/voltage_divider/subckt/: voltage_divider.cir
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/krets-cli/: Cargo.toml
crates/krets-cli/src/: main.rs
crates/krets-gui/: Cargo.toml
crates/krets-gui/src/: lib.rs  main.rs
crates/krets-matrix/: Cargo.toml
crates/krets-matrix/src/: complex_matrix.rs  lib.rs  matrix.rs  mna_matrix.rs
crates/krets-parser/: Cargo.toml
crates/krets-parser/src/: analyses.rs  circuit.rs  constants.rs  elements.rs  error.rs  lib.rs  model.rs  models.rs  parser.rs  prelude.rs  subcircuit.rs  utils.rs
crates/krets-parser/src/elements/: bjt.rs  capacitor.rs  current_source.rs  diode.rs  inductor.rs  mosfet.rs  nmosfet.rs  resistor.rs  subcircuit.rs  voltage_source.rs
crates/krets-parser/src/models/: diode.rs  nmosfet.rs  pmosfet.rs
crates/krets-parser/tests/: test_parse_netlist.rs
crates/krets-result/: Cargo.toml  simple_results.parquet
crates/krets-result/src/: lib.rs
crates/krets-solver/: Cargo.toml
crates/krets-solver/benches/: benchmark.rs
crates/krets-solver/src/: ac_solver.rs  config.rs  dc_solver.rs  error.rs  lib.rs  op_solver.rs  prelude.rs  solver.rs  stampable.rs
crates/krets-solver/src/solver/: ac.rs  dc.rs  op.rs  transient.rs
crates/krets-solver/tests/: test_ac.rs  test_dc.rs  test_op.rs  test_transient.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: lib.rs  mna_matrix.rs
crates/parser/: Cargo.toml
crates/parser/src/: circuit.rs  element.rs  elements.rs  error.rs  lib.rs  netlist.rs  prelude.rs  utils.rs
crates/parser/src/element/: bipolar_junction_transistor.rs  capacitor.rs  current_source.rs  diode.rs  inductor.rs  mosfet.rs  nmos.rs  pmos.rs  resistor.rs  voltage_source.rs
crates/parser/src/elements/: bjt.rs  capacitor.rs  current_source.rs  mosfet.rs  resistor.rs  voltage_source.rs
crates/parser/tests/: test_parse_netlist.rs
crates/result/: Cargo.toml
crates/result/src/: lib.rs
crates/solver/: Cargo.toml
crates/solver/src/: error.rs  lib.rs  matrix.rs  mna_matrix.rs
crates/solver/tests/: test_nodes.rs
documentation/: appendix.typ  constants.typ  main.typ
scripts/: generate_resistor_ladder.py  schockley_equation.py
