[workspace]
members = [
    "crates/krets-cli",
    "crates/krets-parser",
    "crates/krets-result",
    "crates/krets-solver",
]
resolver = "2"


[workspace.lints.clippy]
must_use_candidate = "allow"
float_cmp = "allow"
missing_panics_doc = "allow"
# pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }

[workspace.dependencies]
thiserror = "2"
faer = "0.22.6"
tracing = "0.1.41"

krets-parser = { path = "crates/krets-parser" }
krets-solver = { path = "crates/krets-solver" }
krets-result = { path = "crates/krets-result" }


[profile.release]
debug = true
lto = "fat"
codegen-units = 1
