[workspace]
members = [
    "crates/krets-cli",
    "crates/krets-gui",
    "crates/krets-parser",
    "crates/krets-result",
    "crates/krets-solver",
]
resolver = "2"


[workspace.lints.clippy]
must_use_candidate = "allow"
float_cmp = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
implicit_hasher = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
# pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }

[workspace.dependencies]
thiserror = "2.0.17"
faer = "0.23.2"
tracing = "0.1.41"
parquet = "56.2.0"


krets-parser = { path = "crates/krets-parser" }
krets-solver = { path = "crates/krets-solver" }
krets-result = { path = "crates/krets-result" }


[profile.release]
debug = true
lto = "fat"
codegen-units = 1
