[workspace]
members = [
    "crates/krets-cli",
    "crates/krets-gui",
    "crates/krets-parser",
    "crates/krets-result",
    "crates/krets-solver",
]
resolver = "2"


[workspace.lints.clippy]
must_use_candidate = "allow"
float_cmp = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
implicit_hasher = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
# pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }

[workspace.dependencies]
thiserror = "2.0.17"
faer = "0.23.2"
tracing = "0.1.41"
parquet = "57.0.0"
arrow = "57.0.0"
log = "0.4.28"
env_logger = "0.11.8"
toml = "0.9.8"
nom = "8.0.0"
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = "0.33.0"
egui_plot = "0.34.0"
egui_table = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.51", features = ["derive"] }
polars = { version = "0.51.0", features = ["parquet"] }

krets-parser = { path = "crates/krets-parser" }
krets-solver = { path = "crates/krets-solver" }
krets-result = { path = "crates/krets-result" }


[profile.release]
debug = true
lto = "fat"
codegen-units = 1
