[package]
name = "krets-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
krets-parser = { path = "../krets-parser" }
krets-solver = { path = "../krets-solver" }
krets-result = { path = "../krets-result" }
krets-gui = { path = "../krets-gui" }

[lints]
workspace = true


[[bin]]
name = "krets"
path = "src/main.rs"
