[package]
name = "krets-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
krets-parser = { path = "../krets-parser" }
krets-solver = { path = "../krets-solver" }
krets-result = { path = "../krets-result" }
krets-gui = { path = "../krets-gui" }


[lints]
workspace = true


[[bin]]
name = "krets"
path = "src/main.rs"
