[package]
name = "krets-gui"
version = "0.1.1"
edition = "2024"

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
egui_table = { workspace = true }


[lints]
workspace = true
