[package]
name = "krets-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
krets-parser = { path = "../krets-parser" }
krets-matrix = { path = "../krets-matrix" }

faer = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true


[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "benchmark"
harness = false
