[package]
name = "krets-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
krets-parser = { path = "../krets-parser" }

faer = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true


[dev-dependencies]
criterion = "0.6.0"


[[bench]]
name = "benchmark"
harness = false
